For Regulatos brought up to standard

--- a/for-regulators.html
+++ b/for-regulators.html
@@ -36,7 +36,6 @@
       background-color: #fff;
     }
 
-    /* Global site header / nav */
     .site-header {
       border-bottom: 1px solid var(--ew-border);
       background: #ffffff;
@@ -74,7 +73,6 @@
       border-radius: 999px;
     }
 
-    /* Canonical nav style: bold only on active item */
     .site-nav a[aria-current="page"] {
       background: none;
       border: none;
@@ -141,127 +139,126 @@
 
 <body>
 
-  <!-- Global site header / nav -->
-  <header class="site-header">
-    <div class="nav-inner">
-      <a href="/index.html" class="brand">EntityWorks</a>
-      <nav class="site-nav" aria-label="Primary">
-        <a href="/the-standard.html">The Standard</a>
-        <a href="/ai-perception.html">AI Perception</a>
-        <a href="/for-regulators.html" aria-current="page">For Regulators</a>
-        <a href="/publications.html">Publications</a>
-      </nav>
-    </div>
-  </header>
+<header class="site-header">
+  <div class="nav-inner">
+    <a href="/index.html" class="brand">EntityWorks</a>
+    <nav class="site-nav" aria-label="Primary">
+      <a href="/the-standard.html">The Standard</a>
+      <a href="/ai-perception.html">AI Perception</a>
+      <a href="/for-regulators.html" aria-current="page">For Regulators</a>
+      <a href="/publications.html">Publications</a>
+    </nav>
+  </div>
+</header>
 
-  <main>
-    <h1>For regulators</h1>
-    <p><strong>Human-Facing Edition (v1.1)</strong></p>
+<main>
+  <h1>For regulators</h1>
+  <p><strong>Human-Facing Edition (v1.1)</strong></p>
 
-    <h2>1. Role of AI Systems in Regulated Contexts</h2>
-    <p>
-      AI systems increasingly act as an initial interpretive layer across public services, regulated sectors, and organisational environments. As these systems perform retrieval, reasoning, classification, and decision-support tasks, their internal representations of people, organisations, relationships, and ideas influence how information is interpreted and surfaced.
-    </p>
-    <p>
-      Regulators often engage with these systems indirectly, evaluating outcomes and behaviours without access to model internals or proprietary architectures. Understanding how models form and maintain representational meaning therefore becomes a central consideration in oversight work.
-    </p>
+  <h2>1. Role of AI Systems in Regulated Contexts</h2>
+  <p>
+    AI systems increasingly act as an initial interpretive layer across public services, regulated sectors, and organisational environments. As these systems perform retrieval, reasoning, classification, and decision-support tasks, their internal representations of people, organisations, relationships, and ideas influence how information is interpreted and surfaced.
+  </p>
+  <p>
+    Regulators often engage with these systems indirectly, evaluating outcomes and behaviours without access to model internals or proprietary architectures. Understanding how models form and maintain representational meaning therefore becomes a central consideration in oversight work.
+  </p>
 
-    <h2>2. Purpose of This Document</h2>
-    <p>
-      This page presents how the EntityWorks formulation of AI Perception, as defined within the EntityWorks Standard, may be relevant to regulatory work. It describes the components of the Standard that relate to representational behaviour, outlines challenges regulators may encounter when evaluating such behaviour, and provides a structured reference for understanding how the Standard can be consulted.
-    </p>
+  <h2>2. Purpose of This Document</h2>
+  <p>
+    This page presents how the EntityWorks formulation of AI Perception, as defined within the EntityWorks Standard, may be relevant to regulatory work. It describes the components of the Standard that relate to representational behaviour, outlines challenges regulators may encounter when evaluating such behaviour, and provides a structured reference for understanding how the Standard can be consulted.
+  </p>
 
-    <h2>3. AI Perception and Regulatory Oversight</h2>
-    <p>
-      Within the EntityWorks Standard, AI Perception defines the conceptual structures and interpretive boundaries used to describe how AI systems form, update, and express representations of entities. These structures support consistent terminology and evaluative criteria that may assist regulators in contexts where representational behaviour influences outcomes, decisions, or information flows.
-    </p>
-    <p>
-      The discipline enables representational analysis without requiring access to model internals. Instead, it offers conceptual tools for examining externally observable behaviour, such as stability, consistency, and distinguishability of entity representations.
-    </p>
+  <h2>3. AI Perception and Regulatory Oversight</h2>
+  <p>
+    Within the EntityWorks Standard, AI Perception defines the conceptual structures and interpretive boundaries used to describe how AI systems form, update, and express representations of entities. These structures support consistent terminology and evaluative criteria that may assist regulators in contexts where representational behaviour influences outcomes, decisions, or information flows.
+  </p>
+  <p>
+    The discipline enables representational analysis without requiring access to model internals. Instead, it offers conceptual tools for examining externally observable behaviour, such as stability, consistency, and distinguishability of entity representations.
+  </p>
 
-    <h2>4. Regulatory Challenges Addressed by the Standard</h2>
-    <p>Regulators may encounter several challenges when assessing representational behaviour in AI systems. The EntityWorks Standard provides terminology and structural clarity that can support understanding in these areas, including:</p>
+  <h2>4. Regulatory Challenges Addressed by the Standard</h2>
+  <p>Regulators may encounter several challenges when assessing representational behaviour in AI systems. The EntityWorks Standard provides terminology and structural clarity that can support understanding in these areas, including:</p>
 
-    <ul>
-      <li>interpretive opacity — where the internal mechanisms behind a model’s understanding are not visible</li>
-      <li>inconsistent or unstable representations — which may affect reliability in regulated environments</li>
-      <li>cross-model divergence — where different systems form conflicting understandings of the same entity</li>
-      <li>limited evaluative criteria — making assessment difficult without a structured reference</li>
-      <li>representational drift — where understanding shifts over time without clear explanation</li>
-    </ul>
+  <ul>
+    <li>interpretive opacity — where the internal mechanisms behind a model’s understanding are not visible</li>
+    <li>inconsistent or unstable representations — which may affect reliability in regulated environments</li>
+    <li>cross-model divergence — where different systems form conflicting understandings of the same entity</li>
+    <li>limited evaluative criteria — making assessment difficult without a structured reference</li>
+    <li>representational drift — where understanding shifts over time without clear explanation</li>
+  </ul>
 
-    <h2>5. How Regulators May Use the EntityWorks Standard</h2>
-    <p>
-      Regulators may consult the EntityWorks Standard when its terminology, structures, or evaluative components offer clarity within existing oversight frameworks. The Standard can support work in contexts where the behaviour of AI systems is relevant to regulatory duties, particularly where:
-    </p>
+  <h2>5. How Regulators May Use the EntityWorks Standard</h2>
+  <p>
+    Regulators may consult the EntityWorks Standard when its terminology, structures, or evaluative components offer clarity within existing oversight frameworks. The Standard can support work in contexts where the behaviour of AI systems is relevant to regulatory duties, particularly where:
+  </p>
 
-    <ul>
-      <li>representational behaviour requires examination</li>
-      <li>stable and consistent entity interpretation is important</li>
-      <li>cross-system comparisons are needed</li>
-      <li>structured terminology improves communication between teams or institutions</li>
-    </ul>
+  <ul>
+    <li>representational behaviour requires examination</li>
+    <li>stable and consistent entity interpretation is important</li>
+    <li>cross-system comparisons are needed</li>
+    <li>structured terminology improves communication between teams or institutions</li>
+  </ul>
 
-    <p>
-      The Standard does not prescribe regulatory practice. It provides a formal reference that regulators may draw on where applicable.
-    </p>
+  <p>
+    The Standard does not prescribe regulatory practice. It provides a formal reference that regulators may draw on where applicable.
+  </p>
 
-    <h2>6. What the Standard Provides to Regulators</h2>
-    <p>
-      The EntityWorks Standard includes several components that may be relevant to regulatory understanding of representational behaviour:
-    </p>
+  <h2>6. What the Standard Provides to Regulators</h2>
+  <p>
+    The EntityWorks Standard includes several components that may be relevant to regulatory understanding of representational behaviour:
+  </p>
 
-    <ul>
-      <li>canonical definitions that establish consistent terminology</li>
-      <li>structural frameworks describing how machine-interpreted identity is formed</li>
-      <li>diagnostic logic for discussing representational stability and behaviour</li>
-      <li>accreditation criteria relevant to representational integrity</li>
-      <li>forthcoming machine-readable specifications suitable for technical reference</li>
-    </ul>
+  <ul>
+    <li>canonical definitions that establish consistent terminology</li>
+    <li>structural frameworks describing how machine-interpreted identity is formed</li>
+    <li>diagnostic logic for discussing representational stability and behaviour</li>
+    <li>accreditation criteria as defined within the EntityWorks Standard relevant to representational integrity</li>
+    <li>forthcoming machine-readable specifications suitable for technical reference</li>
+  </ul>
 
-    <p>
-      These components are defined within the Standard and may be consulted where their structure or clarity supports regulatory evaluation.
-    </p>
+  <p>
+    These components are defined within the Standard and may be consulted where their structure or clarity supports regulatory evaluation.
+  </p>
 
-    <h2>7. Next Points of Reference</h2>
-    <p>
-      For regulators seeking further detail, the following documents within the EntityWorks Standard provide formal entry points:
-    </p>
+  <h2>7. Next Points of Reference</h2>
+  <p>
+    For regulators seeking further detail, the following documents within the EntityWorks Standard provide formal entry points:
+  </p>
 
-    <ul>
-      <li><a href="/the-standard.html">The Standard</a> — the structural, diagnostic, and governance criteria relevant to representational behaviour</li>
-      <li><a href="/ai-perception.html">AI Perception</a> — the disciplinary formulation describing how AI systems form and maintain their understanding of entities</li>
-      <li><a href="/publications.html">Publications</a> — papers and resources that expand the theoretical and practical applications of the discipline</li>
-    </ul>
+  <ul>
+    <li><a href="/the-standard.html">The Standard</a> — the structural, diagnostic, and governance criteria relevant to representational behaviour</li>
+    <li><a href="/ai-perception.html">AI Perception</a> — the disciplinary formulation describing how AI systems form and maintain their understanding of entities</li>
+    <li><a href="/publications.html">Publications</a> — papers and resources that expand the theoretical and practical applications of the discipline</li>
+  </ul>
 
-    <p>
-      Regulators may also contact the EntityWorks Standards Office for clarification of material defined within the Standard.
-    </p>
+  <p>
+    Regulators may also contact the EntityWorks Standards Office for clarification of material defined within the Standard.
+  </p>
 
-    <h2>8. Document Control</h2>
-    <p>
-      Document Title: For Regulators — Overview<br>
-      Identifier: EW-REG-Overview-v1.1<br>
-      Version: v1.1<br>
-      Status: Published<br>
-      Publication Date: 2025-12-05<br>
-      Next Scheduled Review: 2026-06-05<br>
-      Maintained by: EntityWorks Standards Office
-    </p>
+  <h2>8. Document Control</h2>
+  <p>
+    Document Title: For Regulators — Overview<br>
+    Identifier: EW-REG-Overview-v1.1<br>
+    Version: v1.1<br>
+    Status: Published<br>
+    Publication Date: 2025-12-05<br>
+    Next Scheduled Review: 2026-06-05<br>
+    Maintained by: EntityWorks Standards Office
+  </p>
 
-    <p class="last-updated">
-      Last updated: December 2025
-    </p>
-  </main>
+  <p class="last-updated">
+    Last updated: December 2025
+  </p>
+</main>
 
-  <div id="footer"></div>
-  <script>
-    fetch("/footer.html")
-      .then(response => response.text())
-      .then(html => {
-        document.getElementById("footer").innerHTML = html;
-      });
-  </script>
+<div id="footer"></div>
+<script>
+  fetch("/footer.html")
+    .then(response => response.text())
+    .then(html => {
+      document.getElementById("footer").innerHTML = html;
+    });
+</script>
 
 </body>
 </html>
