Added the Relationship Map

--- a/publications.html
+++ b/publications.html
@@ -210,6 +210,16 @@
     </li>
 
     <li>
+      <strong>
+        <a href="/publications/2025-12-13_EW_Component_Map_v1.0.pdf">
+          EntityWorks Component Relationship Map — Structural Reference (v1.0)
+        </a>
+      </strong>
+      <br>
+      A structural reference describing how the published components of the EntityWorks Standard relate to one another, clarifying positional relationships between architectural elements, boundary artefacts, diagnostic constructs, evaluative components, analytics, and signalling mechanisms.
+    </li>
+
+    <li>
       <strong><a href="/publications/ai-perception-integrity-mark-aipm-v1.0.pdf">
         AI Perception Integrity Mark (AIPM) — Human-Facing Structural Edition (v1.0)
       </a></strong><br>
