Fixed nav and updated links in section 8

--- a/ai-perception.html
+++ b/ai-perception.html
@@ -57,6 +57,7 @@
 
     .site-nav {
       display: flex;
+      flex-wrap: wrap;
       gap: 0.75rem;
       font-size: 0.95rem;
     }
@@ -69,6 +70,8 @@
     }
 
     .site-nav a[aria-current="page"] {
+      background: none;
+      border: none;
       font-weight: 600;
     }
 
@@ -215,9 +218,9 @@
   <h2>8. Canonical References</h2>
   <p>Readers seeking further detail may consult:</p>
   <ul>
-    <li><strong>The EntityWorks Standard</strong> — for formal structure, series organisation, and governance</li>
-    <li><strong>Publications</strong> — for detailed analytical, evaluative, and structural expositions</li>
-    <li><strong>For Regulators</strong> — for oversight-focused contextual material</li>
+    <li><a href="/the-standard.html"><strong>The EntityWorks Standard</strong></a> — for formal structure, series organisation, and governance</li>
+    <li><a href="/publications.html"><strong>Publications</strong></a> — for detailed analytical, evaluative, and structural expositions</li>
+    <li><a href="/for-regulators.html"><strong>For Regulators</strong></a> — for oversight-focused contextual material</li>
   </ul>
   <p>
     Together, these resources constitute the formal articulation of the discipline of AI Perception within EntityWorks.
