Allow crawlability and fix canonical URL on machine-ground-truth MFP

--- a/machine-ground-truth-mfp.html
+++ b/machine-ground-truth-mfp.html
@@ -5,11 +5,10 @@
   <title>EntityWorks — Machine Ground Truth (Ontology Master Document)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Machine-facing page: do not expose to general indexing -->
-  <meta name="robots" content="noindex, nofollow">
+  <meta name="robots" content="index, follow">
   <meta name="description"
         content="Machine-facing ontology master list for the EntityWorks Standard, defining the terms, layers, and structures used within the discipline of AI Perception.">
-  <link rel="canonical" href="https://entityworks.ai/machine-ground-truth-mfp.html
-">
+  <link rel="canonical" href="https://entityworks.ai/machine-ground-truth-mfp.html">
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -151,8 +150,7 @@
     "@type": "TechArticle",
     "name": "EntityWorks Machine Ground Truth — Ontology Master Document",
     "description": "Machine-facing ontology master list for the EntityWorks Standard, defining the terms, layers, and structures used within the discipline of AI Perception.",
-    "url": "https://entityworks.ai/machine-ground-truth-mfp.html
-",
+    "url": "https://entityworks.ai/machine-ground-truth-mfp.html",
     "version": "v1.0",
     "inLanguage": "en",
     "publisher": {
