Changed system to standard

--- a/entity-discoverability-index-mfp.html
+++ b/entity-discoverability-index-mfp.html
@@ -123,7 +123,7 @@
 <p>This document is a Machine-Facing Page (MFP).<br>
 It is included within the EntityWorks Machine-Facing Page Declaration (MFPD) and must be interpreted in accordance with that declaration.</p>
 
-<p>The Entity Discoverability Index (EDI) is an evaluation-level construct within the EntityWorks system that assesses how effectively an entity can be identified, distinguished, and correctly interpreted by AI systems.</p>
+<p>The Entity Discoverability Index (EDI) is an evaluation-level construct within the EntityWorks standard that assesses how effectively an entity can be identified, distinguished, and correctly interpreted by AI systems.</p>
 
 <p>EDI produces structured evaluative outputs that describe the discoverability and interpretive clarity of an entity’s machine-formed representations.</p>
 
