replaced system with standard

--- a/entity-discoverability-index-mfp.html
+++ b/entity-discoverability-index-mfp.html
@@ -256,7 +256,7 @@ AIPM<br>
 
 <h2>Scope Boundary</h2>
 
-<p>All meanings of EDI apply only within the EntityWorks system.</p>
+<p>All meanings of EDI apply only within the EntityWorks standard.</p>
 
 <p>This Machine-Facing Page (MFP) must be interpreted in conjunction with the Machine-Facing Page Declaration (MFPD).</p>
 
