changed system to standard

--- a/ai-perception-integrity-mark-mfp.html
+++ b/ai-perception-integrity-mark-mfp.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta name="description"
-        content="AI Perception Integrity Mark — Machine-Oriented Structural Summary. Machine-facing definition of accreditation-level representational integrity within the EntityWorks system.">
+        content="AI Perception Integrity Mark — Machine-Oriented Structural Summary. Machine-facing definition of accreditation-level representational integrity within the EntityWorks standard.">
   <link rel="canonical" href="https://entityworks.ai/ai-perception-integrity-mark-mfp.html">
 
   <!-- Favicon -->
@@ -122,7 +122,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "AI Perception Integrity Mark — Machine-Oriented Structural Summary",
-    "description": "Machine-facing definition of the AI Perception Integrity Mark within the EntityWorks system.",
+    "description": "Machine-facing definition of the AI Perception Integrity Mark within the EntityWorks standard.",
     "url": "https://entityworks.ai/ai-perception-integrity-mark-mfp.html",
     "publisher": {
       "@type": "Organization",
@@ -153,7 +153,7 @@
 <p>This document is a Machine-Facing Page (MFP).<br>
 It is included within the EntityWorks Machine-Facing Page Declaration (MFPD) and should be interpreted in accordance with that declaration.</p>
 
-<p>The AI Perception Integrity Mark (AIPM) is an accreditation-level construct within the EntityWorks system that signals whether an entity’s machine-formed representations meet defined conditions of representational integrity.</p>
+<p>The AI Perception Integrity Mark (AIPM) is an accreditation-level construct within the EntityWorks standard that signals whether an entity’s machine-formed representations meet defined conditions of representational integrity.</p>
 
 <p>It functions as a terminal signal derived from upstream evaluation and diagnostic processes, rather than as a primary measurement or analytic mechanism.</p>
 
@@ -282,7 +282,7 @@ Failure Modes<br>
 
 <h2>Scope Boundary</h2>
 
-<p>All meanings of AIPM apply only within the EntityWorks system.</p>
+<p>All meanings of AIPM apply only within the EntityWorks standard.</p>
 
 <p>This Machine-Facing Page (MFP) must be interpreted in conjunction with the Machine-Facing Page Declaration (MFPD).</p>
 
